codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__rendering__tests__external_writer_view_shows_notice_instead_of_composer.snap
---
source: tui/src/chatwidget/rendering_tests.rs
expression: "rows.iter().map(|row| row.trim_end()).collect::<Vec<_>>().join(\"\\n\")"
---


  🔒   This conversation is open in another app  r to retry
      Close it there and press R to continue here.

   r retry   f fork   esc/⌃c/q exit   ⌃t transcript
